tests/snapshots/parser_error_fixtures/eof_after_if_condition.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/eof_after_if_condition.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing If Body

This `if` branch needs to start with `{`.

  examples/parser_errors/eof_after_if_condition.flx:2:8
  |
2 |     if true
  |        ^^^^
  |        ---- this `if` branch starts here

Note:
  while parsing function `main` > `if` expression

Help:
  Try adding `{` after the `if` condition.
== stdout ==
<not executed>
